completed ui for the euro project dashboard

--- a/final_euro_project.ipynb
+++ b/final_euro_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "b4832ee2",
    "metadata": {},
    "outputs": [],
@@ -12,11 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "1bf6bc2c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#IMPORT LIBRARIES\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import folium"
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "9a5cce77",
    "metadata": {},
    "outputs": [
@@ -147,19 +148,20 @@
        "11        SPAIN     40.4637    3.7492"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# CREATE A DATAFRAME HAVING COUNTRY COORDINATES\n",
     "df2 = pd.read_excel('./country_coordinates.xlsx')\n",
     "df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "cbe45ed5",
    "metadata": {},
    "outputs": [
@@ -169,31 +171,25 @@
        "Index(['COUNTRY', 'LONGTITUDE', 'LATITUDE'], dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#CREATE A VARIABLE CONSISTING COLUMN NAMES OF DATAFRAME DF2\n",
     "column = df2.columns\n",
     "column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8da294f7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "99c370c6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#CREATING A VARIABLE var WHICH WILL FIRST STORE THE VALUE OF LONGITUDE AND LATITUDE AND THEN CREATE THE MAP\n",
     "var = folium.Map(location=[df2.LONGTITUDE.mean(), df2.LATITUDE.mean()], \n",
     "                 zoom_start=3, control_scale=True)\n",
     "\n",
@@ -211,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "fffeb779",
    "metadata": {},
    "outputs": [],
@@ -221,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "4ea4f77e",
    "metadata": {},
    "outputs": [],
@@ -250,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "cebf2d4c",
    "metadata": {},
    "outputs": [],
@@ -267,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "134a90a9",
    "metadata": {},
    "outputs": [],
@@ -281,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "cd6122a3",
    "metadata": {},
    "outputs": [
@@ -291,32 +287,33 @@
      "text": [
       "Enter the days you want to spent in europe (travelling not include )\n",
       " ['a', 'b', 'c']\n",
-      "a=19N/20D ,b=29N/30D , c=39N/40D\n",
-      "enter the days \n",
-      "a\n",
+      "a=19N/20D ,b=29N/30D , c=39N/40D\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "so the starting point is FRANCE and your exit is from DENMARK\n",
       "\n",
       "\n",
-      "For the 9 nights and 10 days your countries are as \n",
-      "\n",
-      " ['FRANCE', 'BELGIUM', 'NETHERLANDS', 'GERMANY', 'SWITZERLAND', 'CZECHIA', 'DENMARK']\n",
-      "\n",
-      "so the package you have select is \n",
-      "  a\n",
-      "select the countries from   ['BELGIUM', 'NETHERLANDS', 'GERMANY', 'SWITZERLAND', 'CZECHIA', 'AUSTRIA']\n",
-      " select country you want to eliminate BELGIUM\n",
-      "your country are as follow \n",
-      "['NETHERLANDS', 'GERMANY', 'SWITZERLAND', 'CZECHIA', 'AUSTRIA', 'FRANCE', 'DENMARK']\n",
-      "       COUNTRY  LONGTITUDE  LATITUDE\n",
-      "0       FRANCE     46.2276    2.2137\n",
-      "3  NETHERLANDS     52.1326    5.2913\n",
-      "4      DENMARK     56.2639    9.5018\n",
-      "5      GERMANY     51.1657   10.4515\n",
-      "6      CZECHIA     49.8175   15.4730\n",
-      "7      AUSTRIA     47.5162   14.5501\n",
-      "9  SWITZERLAND     46.8182    8.2275\n",
-      "invalid input\n"
+      " for 29 Nights and 30 Days your countries are as \n",
+      "  ['FRANCE', 'BELGIUM', 'NETHERLANDS', 'GERMANY', 'SWITZERLAND', 'CZECHIA', 'ITALY', 'AUSTRIA', 'DENMARK']\n",
+      "select the countries from   ['BELGIUM', 'LUXEMBOURG', 'NETHERLANDS', 'GERMANY', 'HUNGARY', 'SWITZERLAND', 'CZECHIA', 'ITALY', 'AUSTRIA']\n",
+      "your countries are as follows \n",
+      "['BELGIUM', 'LUXEMBOURG', 'GERMANY', 'HUNGARY', 'SWITZERLAND', 'CZECHIA', 'ITALY', 'AUSTRIA', 'FRANCE', 'DENMARK']\n",
+      "        COUNTRY  LONGTITUDE  LATITUDE\n",
+      "0        FRANCE     46.2276    2.2137\n",
+      "1       BELGIUM     50.5039    4.4699\n",
+      "2    LUXEMBOURG     49.8153    6.1296\n",
+      "4       DENMARK     56.2639    9.5018\n",
+      "5       GERMANY     51.1657   10.4515\n",
+      "6       CZECHIA     49.8175   15.4730\n",
+      "7       AUSTRIA     47.5162   14.5501\n",
+      "8       HUNGARY     47.1625   19.5033\n",
+      "9   SWITZERLAND     46.8182    8.2275\n",
+      "10        ITALY     41.8719   12.5674\n"
      ]
     }
    ],
@@ -534,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
